--- a/face_reidentification/settings.json
+++ b/face_reidentification/settings.json
@@ -5,16 +5,5 @@
     "device": "CPU",
     "fps": 0,
     "save_fps": 0,
-    "drivers_dir": "./face_database",
-    "BLUE": [
-        255,
-        0,
-        0
-    ],
-    "RED": [
-        0,
-        0,
-        255
-    ],
-    "name": "face_reidentification.functions.py"
+    "drivers_dir": "./face_database"
 }
